tests/compilefail02.out
[1mtests/compilefail02.pas:5:8: [0m[1m[91merror:[0m Cannot assign value '3.14' of type real to type integer
     5 | 	a:=3.14;