tests/compilefail02.pas
program compilefail02(output);
var
	a:integer;
begin
	a:=3.14;
	writeln(a);
end.
